[gd_scene load_steps=7 format=3 uid="uid://g0l6borq0mge"]

[ext_resource type="Script" path="res://end_screen.gd" id="1_5n82s"]
[ext_resource type="Texture2D" uid="uid://c88t64h0p0v8i" path="res://assets/logos_bgs/bg.png" id="2_4qax3"]
[ext_resource type="Texture2D" uid="uid://jvc43i2h80m6" path="res://assets/logos_bgs/continue.png" id="3_gwx5e"]
[ext_resource type="Texture2D" uid="uid://dqnlp6e7wm3bo" path="res://assets/logos_bgs/mainmenu.png" id="4_a3n6h"]
[ext_resource type="Texture2D" uid="uid://dvs6nh67debng" path="res://assets/logos_bgs/levelwon.png" id="5_bob46"]
[ext_resource type="Texture2D" uid="uid://cmtfqrtpasvuw" path="res://assets/logos_bgs/exit.png" id="5_plbny"]

[node name="EndScreen" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_5n82s")

[node name="EndMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="EndMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4qax3")

[node name="Buttons" type="VBoxContainer" parent="EndMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.0
offset_top = -13.0
offset_right = 188.0
offset_bottom = 337.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Continue" type="TextureButton" parent="EndMenu/Buttons"]
custom_minimum_size = Vector2(340, 100)
layout_mode = 2
texture_normal = ExtResource("3_gwx5e")
stretch_mode = 0

[node name="MainMenu" type="TextureButton" parent="EndMenu/Buttons"]
custom_minimum_size = Vector2(340, 100)
layout_mode = 2
texture_normal = ExtResource("4_a3n6h")
stretch_mode = 0

[node name="ExitGame" type="TextureButton" parent="EndMenu/Buttons"]
custom_minimum_size = Vector2(340, 100)
layout_mode = 2
texture_normal = ExtResource("5_plbny")
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="EndMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -470.0
offset_top = 32.0
offset_right = 470.0
offset_bottom = 492.0
grow_horizontal = 2
texture = ExtResource("5_bob46")

[connection signal="pressed" from="EndMenu/Buttons/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="EndMenu/Buttons/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="EndMenu/Buttons/ExitGame" to="." method="_on_exit_game_pressed"]
